--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
     "bootstrap-vue": "^2.23.1",
+    "chart.js": "^4.2.1",
     "vue": "^3.2.47",
+    "vue-chartjs": "^5.2.0",
     "vue-router": "^4.0.13"
   },
   "devDependencies": {
