--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap-vue": "^2.23.1",
     "chart.js": "^4.2.1",
     "jquery": "^3.6.4",
+    "load-google-maps-api": "^2.0.2",
     "vue": "^3.2.47",
     "vue-chartjs": "^5.2.0",
     "vue-router": "^4.0.13"
