--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "@auth0/auth0-vue": "^2.2.0",
+    "@vueuse/core": "^10.1.0",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
     "bootstrap-vue": "^2.23.1",
     "chart.js": "^4.2.1",
     "jquery": "^3.6.4",
     "load-google-maps-api": "^2.0.2",
+    "usemodal-vue3": "^0.3.7",
     "vue": "^3.2.47",
     "vue-chartjs": "^5.2.0",
     "vue-router": "^4.0.13"
