--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.2.3",
     "bootstrap-vue": "^2.23.1",
     "chart.js": "^4.2.1",
+    "dotenv": "^16.0.3",
     "jquery": "^3.6.4",
     "load-google-maps-api": "^2.0.2",
     "usemodal-vue3": "^0.3.7",
