--- a/package.json
+++ b/package.json
@@ -24,6 +24,13 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
-    "vite": "^4.1.4"
+    "css-loader": "^6.7.3",
+    "vite": "^4.1.4",
+    "vue-loader": "^17.1.0",
+    "vue-style-loader": "^4.1.3",
+    "vue-template-compiler": "^2.7.14",
+    "webpack": "^5.81.0",
+    "webpack-cli": "^5.0.2",
+    "webpack-dev-server": "^4.13.3"
   }
 }
