--- a/package.json
+++ b/package.json
@@ -28,9 +28,6 @@
     "vite": "^4.1.4",
     "vue-loader": "^17.1.0",
     "vue-style-loader": "^4.1.3",
-    "vue-template-compiler": "^2.7.14",
-    "webpack": "^5.81.0",
-    "webpack-cli": "^5.0.2",
-    "webpack-dev-server": "^4.13.3"
+    "vue-template-compiler": "^2.7.14"
   }
 }
