--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "usemodal-vue3": "^0.3.7",
     "vue": "^3.2.47",
     "vue-chartjs": "^5.2.0",
-    "vue-router": "^4.0.13"
+    "vue-router": "^4.0.13",
+    "vue-scrollto": "^2.20.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
